--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-    
+    <main id="container">
+        <section id="telefone">
+            <iframe src="home.html" frameborder="0" scrolling="no" height="" name="home" id="home">Seu navegador não é compatível com iframes!</iframe>
+        </section>
+        <section id="botoes">
+            <a href="#" target="home"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="#" target="home"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
+            <a href="#" target="home"><img src="imagens/logo-github.jpg" alt="git-hub"></a> <br>
+            <a href="#" target="home"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="#" target="home"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+            <a href="#" target="home"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+        </section>
+    </main>
 </body>
 </html>
