--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-    <main id="container">
+    <main>
         <section id="telefone">
             <iframe src="home.html" frameborder="0" scrolling="no" height="" name="home" id="home">Seu navegador não é compatível com iframes!</iframe>
         </section>
