--- a/home.html
+++ b/home.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
         body {
-            background-image: url(imagens/tela-home.jpg);
-            background-repeat: no-repeat;
-            background-position: top center;
+            width: 100vw;
+            height: 100vh;
+            background: black url(imagens/tela-home.jpg) no-repeat top center;
             background-size: cover;
         }
     </style>
