--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" frameborder="0" scrolling="no" height="" name="home" id="home">Seu navegador não é compatível com iframes!</iframe>
+            <iframe src="home.html" frameborder="0" scrolling="no" name="home" id="home">Seu navegador não é compatível com iframes!</iframe>
         </section>
         <section id="botoes">
-            <a href="#" target="home"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
-            <a href="#" target="home"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
-            <a href="#" target="home"><img src="imagens/logo-github.jpg" alt="git-hub"></a> <br>
+            <a href="home.html" target="home"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="facebook.html" target="home"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
+            <a href="github.html" target="home"><img src="imagens/logo-github.jpg" alt="git-hub"></a> <br>
             <a href="#" target="home"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
             <a href="#" target="home"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
             <a href="#" target="home"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
