--- a/github.html
+++ b/github.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="">
-    <a href="https://github.com/gustavoguanabara">ACESSE JÁ</a>
+    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE JÁ</a>
 </body>
 </html>
