--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <a href="home.html" target="home"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
             <a href="facebook.html" target="home"><img src="imagens/logo-facebook.jpg" alt="home"></a> <br>
             <a href="github.html" target="home"><img src="imagens/logo-github.jpg" alt="git-hub"></a> <br>
-            <a href="#" target="home"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
-            <a href="#" target="home"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
-            <a href="#" target="home"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+            <a href="instagram.html" target="home"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="twitter.html" target="home"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+            <a href="youtube.html" target="home"><img src="imagens/logo-youtube.jpg" alt="youtube"></a>
         </section>
     </main>
 </body>
